2003-06-02  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_smpp.c: fixed a bug in pdu_to_msg() while extracting the
      UDH sequence. If the UDH length indicator was > then the message itself
      the octstr_copy() calls would cause PANICs to stop bearerbox. Now we 
      discard any binary messages that don't have at least length valid UDH
      length indicators. Thanks to Alexander's broken SMPP server for 
      spotting this ;))

2003-05-29  Bruno Rodrigues  <bruno.rodrigues@litux.org>
    * config.{guess,sub}: updated from autotools-dev 20030519.1
    * userguide.xml: added missing documentation for notification-pid
      and notification-addr for UCP/EMI. Code patched on Aug 05 2002
    * userguide.xml: added frames to y/n tables; updated at2 capabilities

2003-05-28  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_http.c: some fixes for system-types 'brunet' and
      'xidris'.

2003-05-28  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_soap.c: adding new SMSC module for SOAP over HTTP from
      Oded and Dima from m-Wise. Yet not bound to the smsc abstraction
      layer. Thanks a lot!

2003-05-27  Bruno Rodrigues  <bruno.rodrigues@litux.org>
    * doc/userguide/userguide.xml: fixes in post-xml section

2003-05-27  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_cimd2.c: Fixing wrong time for messages. 
      Thanks again to Angel for this fix.

2003-05-27  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smscconn_p.h, gw/smscconn.c, gw/smsc/smsc_at2.h, 
      gw/smsc/smsc_[at2|cimd2|smpp].c: Angel's alt-dcs abstraction layer
      patch for at2, cimd2 and smpp. Thanks a lot.
      [Msg-ID: <NCEOLLKPFAEAOBBMHNHEAECCGAAA.afradejas@mediafusion.es>]

2003-05-27  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/shared.c, gw/smsbox.c: fixing mainly BUG#24 for sending too long 
      UDH indicator sequences. This does not cover the effect, when UDH is
      pretty long and Msg body is getting split and hence the UDH gets