@@ -1,3 +1,7 @@
+2003-06-03  Bruno Rodrigues  <bruno.rodrigues@litux.org>
+    * userguide.xml: added information about libxml2-dev packages; replace
+      kannel.3glab.org to kannel.org
+
 2003-06-02  Stipe Tolj  <tolj@wapme-systems.de>
     * gw/smsc/smsc_smpp.c: fixed a bug in pdu_to_msg() while extracting the
       UDH sequence. If the UDH length indicator was > then the message itself
